--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -16,3 +16,5 @@ steps:
         "push",
         "southamerica-east1-docker.pkg.dev/store-microservice-429511/store-microservice-image/auth-ms",
       ]
+options:
+  logging: CLOUD_LOGGING_ONLY
